# zadeh

./: .clang-format  .clang-tidy  .eslintrc.json  .gitattributes  .gitignore  .npmignore  .prettierignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  appveyor.yml  binding.gyp  fuzzaldrin.coffee  fuzzaldrin.js  package-lock.json  package.json  pnpm-lock.yaml  profile.coz  rollup.config.js
.github/workflows/: CI.yml
VendorLib/: move_const.h
benchmark/: benchmark-large.coffee  benchmark-large.js  benchmark-small.js  benchmark-tree.js  benchmark.coffee  benchmark.js  coz.js  data-small.txt  result.md  result.txt  testutils.js  tree.json
examples/: CMakeLists.txt  example1.cpp
prebuilds/linux-x64/: electron-napi.node  node-napi.node
spec/: array-filterer-spec.js  filter-options-spec.coffee  filter-spec.coffee  filter-tree-spec.js  filter-tree.js  match-spec.coffee  score-spec.coffee  test.coffee  tree-filterer-spec.js  wrap-spec.js
src/: ArrayFilterer.h  ConcurrentQueue.h  StringArrayFilterer.h  TreeFilterer.h  common.h  coz_wrap.h  data_interface.h  filter.cc  filter.h  fuzzaldrin.cc  fuzzaldrin.coffee  fuzzaldrin.h  matcher.cc  matcher.h  options.h  path_scorer.cc  path_scorer.h  query.cc  query.h  scorer.cc  scorer.h  tree.cc  tree.h  zadeh.h
test/: array-filterer-spec.js  debugger.js  filter-options-spec.coffee  filter-spec.coffee  filter-tree-spec.js  match-spec.coffee  object-array-filterer-spec.js  runner.js  score-spec.coffee  string-array-filterer-spec.js  tree-filterer-spec.js  wrap-spec.js
types/: fuzzaldrin-plus-fast.d.ts
(+19 files in other folders)
